--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -17,26 +17,8 @@ body {
 	height: 100%;
 	min-height: 100%;
 
-	@include base-background();
 
-}
-
-.ie-old #base {
-
-	&:after{
-		content: ".";
-		display: block;
-		font-size: 0;
-		text-indent: -9999px;
-		position: absolute;
-		z-index: 1;
-		top: 0;
-		width: 50%;
-		height: 100%;
-		left: 50%;
-	}
-
-	@include base-background-ie();
+	@include base-background(background 0.4s ease-out);
 
 }
 
