--- a/compass/style.scss
+++ b/compass/style.scss
@@ -2,4 +2,5 @@
 @import 'dev/_variables.scss';
 @import 'dev/_mixins.scss';
 @import 'dev/_normalize.scss';
+@import 'dev/_typedjs.scss';
 @import 'dev/_styles.scss';
