--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,6 +393,46 @@ th {
   padding: 0;
 }
 
+.typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @font-face {
   font-family: 'Playfair Display';
   src: url("../fonts/PlayfairDisplay-Bold.eot");
@@ -428,6 +468,20 @@ th {
   font-weight: bold;
   font-style: normal;
 }
+.placeholder, ::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: 'Playfair Display', "Times New Roman", serif;
+  font-weight: 700;
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+}
+
 body {
   font-size: 1.0em;
   background: #f1ebe5;
@@ -450,7 +504,7 @@ body {
   display: block;
   font-size: 0;
   text-indent: -9999px;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   width: 50%;
@@ -461,35 +515,163 @@ body {
   -webkit-transition: background 0.4s ease-out;
   transition: background 0.4s ease-out;
 }
+#base main {
+  -moz-transition: color 0.4s ease-out, background-color 0.4s ease-out;
+  -o-transition: color 0.4s ease-out, background-color 0.4s ease-out;
+  -webkit-transition: color 0.4s ease-out, background-color 0.4s ease-out;
+  transition: color 0.4s ease-out, background-color 0.4s ease-out;
+}
+#base #message-container .message-nav a {
+  -moz-transition: background 0.4s ease-out;
+  -o-transition: background 0.4s ease-out;
+  -webkit-transition: background 0.4s ease-out;
+  transition: background 0.4s ease-out;
+}
+#base #head-nav a {
+  -moz-transition: color 0.4s ease-out, border-color 0.4s ease-out;
+  -o-transition: color 0.4s ease-out, border-color 0.4s ease-out;
+  -webkit-transition: color 0.4s ease-out, border-color 0.4s ease-out;
+  transition: color 0.4s ease-out, border-color 0.4s ease-out;
+}
 #base.bg-client:after {
   background: #b8d4ec;
+}
+#base.bg-client main {
+  color: #7e94a5;
+  background-color: #b8d4ec;
+}
+#base.bg-client #message-container .message-nav a {
+  background: #7e94a5;
+}
+#base.bg-client #head-nav a {
+  color: #7e94a5;
+  border-color: #7e94a5;
 }
 #base.bg-agence:after {
   background: #b9dabb;
 }
+#base.bg-agence main {
+  color: #9ebaa0;
+  background-color: #b9dabb;
+}
+#base.bg-agence #message-container .message-nav a {
+  background: #9ebaa0;
+}
+#base.bg-agence #head-nav a {
+  color: #9ebaa0;
+  border-color: #9ebaa0;
+}
 #base.bg-prospect:after {
   background: #d52685;
+}
+#base.bg-prospect main {
+  color: #b42372;
+  background-color: #d52685;
+}
+#base.bg-prospect #message-container .message-nav a {
+  background: #b42372;
+}
+#base.bg-prospect #head-nav a {
+  color: #b42372;
+  border-color: #b42372;
 }
 #base.bg-boss:after {
   background: #b2dbd7;
 }
+#base.bg-boss main {
+  color: #98bbb8;
+  background-color: #b2dbd7;
+}
+#base.bg-boss #message-container .message-nav a {
+  background: #98bbb8;
+}
+#base.bg-boss #head-nav a {
+  color: #98bbb8;
+  border-color: #98bbb8;
+}
 #base.bg-comptable-banquier:after {
   background: #f1ccde;
+}
+#base.bg-comptable-banquier main {
+  color: #e3a7bf;
+  background-color: #f1ccde;
+}
+#base.bg-comptable-banquier #message-container .message-nav a {
+  background: #e3a7bf;
+}
+#base.bg-comptable-banquier #head-nav a {
+  color: #e3a7bf;
+  border-color: #e3a7bf;
 }
 #base.bg-famille:after {
   background: #d9d7d8;
 }
+#base.bg-famille main {
+  color: #b9b9b9;
+  background-color: #d9d7d8;
+}
+#base.bg-famille #message-container .message-nav a {
+  background: #b9b9b9;
+}
+#base.bg-famille #head-nav a {
+  color: #b9b9b9;
+  border-color: #b9b9b9;
+}
 #base.bg-enfants:after {
   background: #f8d500;
+}
+#base.bg-enfants main {
+  color: #eab61a;
+  background-color: #f8d500;
+}
+#base.bg-enfants #message-container .message-nav a {
+  background: #eab61a;
+}
+#base.bg-enfants #head-nav a {
+  color: #eab61a;
+  border-color: #eab61a;
 }
 #base.bg-belle-famille:after {
   background: #4f4291;
 }
+#base.bg-belle-famille main {
+  color: #45387d;
+  background-color: #4f4291;
+}
+#base.bg-belle-famille #message-container .message-nav a {
+  background: #45387d;
+}
+#base.bg-belle-famille #head-nav a {
+  color: #45387d;
+  border-color: #45387d;
+}
 #base.bg-cible-amoureuse:after {
   background: #ea332f;
 }
+#base.bg-cible-amoureuse main {
+  color: #c32f27;
+  background-color: #ea332f;
+}
+#base.bg-cible-amoureuse #message-container .message-nav a {
+  background: #c32f27;
+}
+#base.bg-cible-amoureuse #head-nav a {
+  color: #c32f27;
+  border-color: #c32f27;
+}
 #base.bg-ex:after {
   background: #164164;
+}
+#base.bg-ex main {
+  color: #10342b;
+  background-color: #164164;
+}
+#base.bg-ex #message-container .message-nav a {
+  background: #10342b;
+}
+#base.bg-ex #head-nav a {
+  color: #10342b;
+  border-color: #10342b;
 }
 
 .structure {
@@ -501,10 +683,16 @@ body {
   position: relative;
   z-index: 2;
 }
-.structure > main, .structure > aside {
+.structure main, .structure aside {
   width: 50%;
   display: table-cell;
   height: 100%;
+}
+.structure main {
+  background-color: #f1ebe5;
+  vertical-align: middle;
+}
+.structure aside {
   vertical-align: middle;
 }
 
@@ -666,4 +854,135 @@ body {
   -o-transition: -o-transform 0.2s ease-out;
   -webkit-transition: -webkit-transform 0.2s ease-out;
   transition: transform 0.2s ease-out;
+}
+
+#head-nav {
+  font-family: 'Circular Std', Helvetica, sans-serif;
+  font-size: 0.75em;
+  font-weight: 900;
+  text-align: center;
+  margin-top: 5%;
+}
+#head-nav a {
+  color: #000;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 1.5;
+  padding: 0 2px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+#head-nav a:hover, #head-nav a.sel {
+  text-decoration: none;
+  border-bottom: 2px solid;
+  margin-bottom: -2px;
+}
+
+main .wrapper {
+  position: relative;
+  margin: 13% 5% 39%;
+  min-height: 450px;
+}
+main .wrapper section {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  z-index: 1;
+  min-height: 450px;
+  width: 100%;
+  -moz-transition: opacity 0.4s ease-out;
+  -o-transition: opacity 0.4s ease-out;
+  -webkit-transition: opacity 0.4s ease-out;
+  transition: opacity 0.4s ease-out;
+}
+main .wrapper section.show {
+  opacity: 1;
+  z-index: 10;
+}
+main .wrapper section input[type='text'] {
+  width: 80%;
+  height: 70px;
+  text-align: center;
+  border: none;
+  background: none;
+  font-family: 'Playfair Display', "Times New Roman", serif;
+  font-weight: 700;
+  margin: 190px auto 0;
+  font-size: 2.8125em;
+  color: #fff;
+  display: block;
+}
+main .wrapper section input[type='text']:focus {
+  outline: none;
+}
+
+#message-container {
+  position: relative;
+}
+#message-container .msg-receiver {
+  font-family: 'Playfair Display', "Times New Roman", serif;
+  font-weight: 700;
+  font-size: 2.875em;
+  text-align: center;
+  color: #fff;
+  padding: 20px 0 60px;
+}
+#message-container .msg-cont {
+  font-family: 'Circular Std', Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 1.625em;
+  color: #fff;
+  text-align: center;
+}
+#message-container .msg-nav {
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  text-align: center;
+}
+#message-container .msg-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#message-container .msg-nav li {
+  margin: 0 15px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  list-style: none;
+}
+#message-container .msg-nav li a {
+  width: 7px;
+  height: 7px;
+  display: block;
+  background: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  text-indent: -9999px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+}
+#message-container .msg-nav li a:hover, #message-container .msg-nav li a.active {
+  border: 2px solid #fff;
+  margin: -2px;
+}
+#message-container textarea {
+  width: 100%;
+  background: none;
+  resize: none;
+  border: none;
+  height: 300px;
+  display: none;
+}
+
+#message-typed {
+  min-height: 200px;
+  overflow: visible;
+  white-space: pre-wrap;
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
