--- a/compass/dev/_variables.scss
+++ b/compass/dev/_variables.scss
@@ -4,4 +4,7 @@ $fontColours: #7e94a5, #9ebaa0, #b42372, #98bbb8, #e3a7bf, #b9b9b9, #eab61a, #45
 $bgImages: "02_client", "01_agence", "09_prospect", "05_boss", "03_banquier", "10_famille", "07_enfants", "06_belle-famille", "08_cible amoureuse", "04_ex";
 $blueTextTitle: #2a00e5;
 $blueTextIcon: #1200ff;
-$sectionMinHeight : 450px;
+$sectionMinHeight : 430px;
+$playfairFontFamily: 'Playfair Display', 'Times New Roman', serif;
+$circularFontFamily: 'Circular Std', Helvetica, sans-serif;
+$circularBookFontFamily: 'Circular Std Book', Helvetica, sans-serif;
