--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,6 +393,67 @@ th {
   padding: 0;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/icomoon.eot?awml6v");
+  src: url("../fonts/icomoon.eot?awml6v#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?awml6v") format("truetype"), url("../fonts/icomoon.woff?awml6v") format("woff"), url("../fonts/icomoon.svg?awml6v#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook:before {
+  content: "\e900";
+}
+
+.icon-googleplus:before {
+  content: "\e901";
+}
+
+.icon-mail:before {
+  content: "\e902";
+}
+
+.icon-restart:before {
+  content: "\e903";
+}
+
+.icon-tumblr:before {
+  content: "\e904";
+}
+
+.icon-twitter:before {
+  content: "\e905";
+}
+
+.icon-arrow-top:before {
+  content: "\e906";
+}
+
+.icon-arrow-bottom:before {
+  content: "\e907";
+}
+
+.icon-arrow-left:before {
+  content: "\e908";
+}
+
+.icon-arrow-right:before {
+  content: "\e909";
+}
+
 .typed-cursor {
   opacity: 1;
   -webkit-animation: blink 0.7s infinite;
@@ -831,6 +892,7 @@ p {
   position: relative;
   padding-top: 24%;
   padding-bottom: 1.5%;
+  color: #2a00e5;
 }
 #menu-type > h2 {
   width: 63.3333%;
@@ -846,7 +908,6 @@ p {
 }
 #menu-type > h2 span {
   font-size: 2em;
-  color: #2a00e5;
   font-family: "Playfair Display", "Times New Roman", serif;
   line-height: 1.1;
   display: block;
@@ -860,9 +921,18 @@ p {
   box-sizing: border-box;
   padding: 32px 40px 30px 15px;
 }
+#menu-type > h2 i {
+  font-size: 1.4em;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  -moz-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
 #menu-type > a {
   width: 30%;
-  color: #1200ff;
   text-decoration: none;
   overflow: hidden;
   -moz-transition: background-color 0.2s ease-out, color 0.2s ease-out, background-position 0.2s ease-out;
@@ -1003,6 +1073,19 @@ p {
   cursor: default;
 }
 #head-nav a.inactive:hover {
+  text-decoration: none;
+  border-bottom: none;
+  margin-bottom: 0;
+}
+#head-nav .icon-restart {
+  cursor: pointer;
+  margin-top: -6px;
+  vertical-align: -3px;
+  font-size: 1.4em;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+#head-nav .icon-restart:hover {
   text-decoration: none;
   border-bottom: none;
   margin-bottom: 0;
@@ -1187,7 +1270,7 @@ main .wrapper section input[type='text']:focus {
   font-size: 1.0em;
   text-transform: uppercase;
   margin-bottom: 20px;
-  font-weight: 900;
+  font-weight: bold;
 }
 #final-block .box-success .lk {
   font-size: 0.875em;
@@ -1206,4 +1289,10 @@ main .wrapper section input[type='text']:focus {
   font-size: 2.25em;
   margin-bottom: 70px;
   font-weight: 700;
+}
+#final-block .box-success .social-lks a {
+  color: inherit;
+  text-decoration: none;
+  font-size: 1.625em;
+  padding: 0 7px;
 }
